--- a/style.css
+++ b/style.css
@@ -47,3 +47,10 @@ body {
     opacity: 1;
     font-size: 1.5rem;
 }
+
+.header {
+    display: flex;
+    justify-content: center;
+    margin: 30px;
+    font-size: 2rem;
+}
